--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "txforge",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/txforge.js",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c rollup.config.js",
